--- a/projeckt.htm
+++ b/projeckt.htm
@@ -31,6 +31,6 @@ body {
 
 <center><h2 class="red-text">Kid Academy</h2>
 
-<marquee behavior=scroll direction="left" scrollamount="50"><iframe width="1120" height="630" src="https://www.youtube.com/embed/1GK92ZnZ-xI" frameborder="0" allowfullscreen></iframe></marquee>
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/1GK92ZnZ-xI" frameborder="0" allowfullscreen></iframe>
 
 <p>The purpose of this site is to teach kids in engaging ways...</p></center>
